mobile version complete

--- a/index.html
+++ b/index.html
@@ -24,6 +24,43 @@
               alt="Dream Travel Logo" />
             <span class="logo-text">Dream <span class="highlight-text">Travel</span></span>
           </a>
+          <ul class="nav-menu">
+            <li>
+              <a
+                href="/"
+                class="nav-link active"
+                >Home</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                class="nav-link"
+                >Packages</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                class="nav-link"
+                >Testimonial</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                class="nav-link"
+                >Blog</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                class="nav-link"
+                >Contact</a
+              >
+            </li>
+          </ul>
           <button class="mobile-menu">
             <span></span>
             <span></span>
@@ -40,15 +77,16 @@
         <div class="hero-content">
           <h2 class="hero-title">Explore Your Travel</h2>
           <p class="hero-text">
-            Dolor sit amet consectetur. suspendisse vitae ultricies dolor adipiscing. In et odio
-            enim ac quis sapien urna eu phasellus.
+            Embark on a journey of a lifetime to explore the ancient charm and breathtaking beauty
+            of Asia. Let us guide you to unforgettable experiences amidst rich cultures and stunning
+            landscapes.
           </p>
         </div>
         <form class="hero-form">
           <input
             class="hero-form-input"
             type="text"
-            placeholder="Where go" />
+            placeholder="Where to" />
           <div class="select-input">
             <input
               class="hero-form-input"
@@ -72,6 +110,334 @@
           </button>
         </form>
       </section>
+
+      <!-- popular tour -->
+      <section class="popular-tour-section">
+        <div class="popular-tour-content">
+          <h2 class="popular-tour-title">Our Popular Tours</h2>
+          <p class="popular-tour-text">
+            Delve into the wonders of Asia with our handpicked tours that promise unforgettable
+            adventures. From mystical temples to pristine beaches, experience the essence of Asia
+            with us.
+          </p>
+          <ul class="popular-tour-list">
+            <li>
+              Dive into the azure waters of Bali, Indonesia, and unwind on its sun-kissed beaches.
+            </li>
+            <li>
+              Explore the cultural heritage of Kyoto, Japan, as you wander through its ancient
+              streets and tranquil gardens.
+            </li>
+            <li>
+              Witness the awe-inspiring beauty of the Taj Mahal in Agra, India, a testament to
+              eternal love and architectural brilliance.
+            </li>
+          </ul>
+          <p class="popular-tour-text">
+            Let us take you on a journey filled with unforgettable moments and cherished memories.
+            Join us and experience the magic of Asia.
+          </p>
+          <button class="btn popular-tour-btn">Read More</button>
+        </div>
+
+        <img
+          class="popular-tour-img"
+          src="./assets/img/popular-tour-image.png"
+          alt="Popular tour" />
+      </section>
+
+      <!-- destination -->
+      <section class="destination-section">
+        <div class="section-header">
+          <h2 class="section-title">Choose Your Destination</h2>
+          <p class="section-text">
+            Select from our diverse range of destinations in Asia, each offering its unique blend of
+            culture, history, and natural beauty. Your next adventure awaits!
+          </p>
+        </div>
+        <div class="destination-grid">
+          <div class="destination-item">
+            <img
+              class="destination-img"
+              src="./assets/img/maldives.jpeg"
+              alt="Maldives Tour" />
+            <h3 class="destination-name">Maldives</h3>
+          </div>
+          <div class="destination-item">
+            <img
+              class="destination-img"
+              src="./assets/img/indonesia.jpeg"
+              alt="Indonesia Tour" />
+            <h3 class="destination-name">Indonesia</h3>
+          </div>
+          <div class="destination-item">
+            <img
+              class="destination-img"
+              src="./assets/img/srilanka.jpeg"
+              alt="Sri Lanka Tour" />
+            <h3 class="destination-name">Sri Lanka</h3>
+          </div>
+          <div class="destination-item">
+            <img
+              class="destination-img"
+              src="./assets/img/north-america.jpeg"
+              alt="North America Tour" />
+            <h3 class="destination-name">North America</h3>
+          </div>
+          <div class="destination-item">
+            <img
+              class="destination-img"
+              src="./assets/img/kashmir.jpeg"
+              alt="Kashmir Tour" />
+            <h3 class="destination-name">Kashmir</h3>
+          </div>
+          <div class="destination-item">
+            <img
+              class="destination-img"
+              src="./assets/img/bangladesh.jpeg"
+              alt="Bangladesh Tour" />
+            <h3 class="destination-name">Bangladesh</h3>
+          </div>
+          <div class="destination-item">
+            <img
+              class="destination-img"
+              src="./assets/img/bandarban.jpeg"
+              alt="Bandarban Tour" />
+            <h3 class="destination-name">Bandarban</h3>
+          </div>
+        </div>
+      </section>
+
+      <!-- blog -->
+      <section class="blog-section">
+        <div class="section-header">
+          <h2 class="section-title">Latest Blog</h2>
+          <p class="section-text">
+            Stay updated with our travel blog. Gain insights, tips, and inspiration for your next
+            adventure.
+          </p>
+        </div>
+        <div class="blog-block">
+          <div class="blog-card">
+            <img
+              class="blog-img"
+              src="./assets/img/offbeat-destinations.jpeg"
+              alt="Blog" />
+            <div class="blog-content">
+              <ul class="blog-meta-block">
+                <li class="blog-meta">
+                  <img
+                    class="blog-meta-icon"
+                    src="./assets/img/user.svg"
+                    alt="user" />
+                  <span class="blog-meta-text">by Egens Lab</span>
+                </li>
+                <li class="blog-meta">
+                  <img
+                    class="blog-meta-icon"
+                    src="./assets/img/comment.svg"
+                    alt="user" />
+                  <span class="blog-meta-text">(0) comment</span>
+                </li>
+              </ul>
+              <h3 class="blog-title">Unveiling Offbeat Destinations</h3>
+            </div>
+          </div>
+          <div class="blog-card">
+            <img
+              class="blog-img"
+              src="./assets/img/solo-travel-trip.jpeg"
+              alt="Blog" />
+            <div class="blog-content">
+              <ul class="blog-meta-block">
+                <li class="blog-meta">
+                  <img
+                    class="blog-meta-icon"
+                    src="./assets/img/user.svg"
+                    alt="user" />
+                  <span class="blog-meta-text">by Egens Lab</span>
+                </li>
+                <li class="blog-meta">
+                  <img
+                    class="blog-meta-icon"
+                    src="./assets/img/comment.svg"
+                    alt="user" />
+                  <span class="blog-meta-text">(0) comment</span>
+                </li>
+              </ul>
+              <h3 class="blog-title">10 Solo Travel Tips</h3>
+            </div>
+          </div>
+          <div class="blog-card">
+            <img
+              class="blog-img"
+              src="./assets/img/global-gastronomy.png"
+              alt="Blog" />
+            <div class="blog-content">
+              <ul class="blog-meta-block">
+                <li class="blog-meta">
+                  <img
+                    class="blog-meta-icon"
+                    src="./assets/img/user.svg"
+                    alt="user" />
+                  <span class="blog-meta-text">by Egens Lab</span>
+                </li>
+                <li class="blog-meta">
+                  <img
+                    class="blog-meta-icon"
+                    src="./assets/img/comment.svg"
+                    alt="user" />
+                  <span class="blog-meta-text">(0) comment</span>
+                </li>
+              </ul>
+              <h3 class="blog-title">Exploring Global Gastronomy</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- choose us -->
+      <section class="choose-us-section">
+        <div class="section-header">
+          <h2 class="section-title">Why Choose Us</h2>
+          <p class="section-text">
+            Choose us for an unparalleled travel experience. With our expertise and dedication, we
+            ensure every aspect of your journey is seamless and memorable.
+          </p>
+        </div>
+        <div class="choose-us-outer">
+          <div class="choose-us-inner">
+            <div class="choose-us-card hotel-card">
+              <img
+                class="choose-us-card-img"
+                src="./assets/img/hotel.png"
+                alt="hotel" />
+              <h3 class="choose-us-card-title">Handpicked Hotels</h3>
+              <p class="choose-us-card-text">
+                Experience comfort and luxury with our carefully selected accommodations that cater
+                to your every need.
+              </p>
+            </div>
+          </div>
+          <div class="choose-us-inner">
+            <div class="choose-us-card map-card">
+              <img
+                class="choose-us-card-img"
+                src="./assets/img/map.png"
+                alt="map" />
+              <h3 class="choose-us-card-title">Expert Guides</h3>
+              <p class="choose-us-card-text">
+                Let our knowledgeable guides lead the way as they unveil the secrets and treasures
+                of each destination.
+              </p>
+            </div>
+          </div>
+          <div class="choose-us-inner">
+            <div class="choose-us-card discount-card">
+              <img
+                class="choose-us-card-img"
+                src="./assets/img/discount.png"
+                alt="discount" />
+              <h3 class="choose-us-card-title">Exclusive Deals</h3>
+              <p class="choose-us-card-text">
+                Enjoy special discounts and offers that make your dream vacation a reality without
+                breaking the bank.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- newsletter -->
+      <section class="newsletter-section">
+        <form class="newsletter-form">
+          <h2 class="newsletter-title">Newsletter</h2>
+          <p class="newsletter-text">
+            Stay informed with our latest updates and exclusive offers. Subscribe to our newsletter
+            now!
+          </p>
+          <hr />
+          <input
+            class="newsletter-input"
+            type="text"
+            placeholder="Enter your name" />
+          <input
+            class="newsletter-input"
+            type="email"
+            placeholder="Enter your email" />
+          <button class="newsletter-form-btn">Subscribe</button>
+        </form>
+        <div class="newsletter-img-block">
+          <img
+            class="newsletter-img"
+            src="./assets/img/newsletter-img.png"
+            alt="Newsletter section image" />
+          <div class="newsletter-content">
+            <p class="offer-sub-text">Dream Travel</p>
+            <p class="offer-main-text">Save up to 70%</p>
+          </div>
+        </div>
+      </section>
     </main>
+
+    <footer class="footer">
+      <div class="wrapper">
+        <div class="footer-logo">
+          <img
+            class="footer-logo-img"
+            src="./assets/img/dream-logo.png"
+            alt="Dream Travel Logo" />
+          <span>Dream <span class="highlight-text">Travel</span> </span>
+        </div>
+        <p class="footer-text">
+          Explore the world with Dream Travel, your trusted companion in every journey. Let us turn
+          your dreams into unforgettable memories.
+        </p>
+        <ul class="footer-social-media">
+          <li>
+            <a
+              href="#"
+              class="footer-social-link">
+              <img
+                class="footer-social-icon"
+                src="./assets/img/facebook.svg"
+                alt="Facebook" />
+            </a>
+          </li>
+          <li>
+            <a
+              href="#"
+              class="footer-social-link">
+              <img
+                class="footer-social-icon"
+                src="./assets/img/instagram.svg"
+                alt="Instagram"
+            /></a>
+          </li>
+          <li>
+            <a
+              href="#"
+              class="footer-social-link">
+              <img
+                class="footer-social-icon"
+                src="./assets/img/linkedin.svg"
+                alt="Linkedin"
+            /></a>
+          </li>
+          <li>
+            <a
+              href="#"
+              class="footer-social-link">
+              <img
+                class="footer-social-icon"
+                src="./assets/img/github.svg"
+                alt="Github"
+            /></a>
+          </li>
+        </ul>
+        <hr />
+        <p class="footer-copyright">2024, All Rights Reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
