desktop version complete

--- a/index.html
+++ b/index.html
@@ -352,10 +352,7 @@
       <section class="newsletter-section">
         <form class="newsletter-form">
           <h2 class="newsletter-title">Newsletter</h2>
-          <p class="newsletter-text">
-            Stay informed with our latest updates and exclusive offers. Subscribe to our newsletter
-            now!
-          </p>
+          <p class="newsletter-text">Stay informed with our latest updates and exclusive offers.</p>
           <hr />
           <input
             class="newsletter-input"
@@ -382,61 +379,63 @@
 
     <footer class="footer">
       <div class="wrapper">
-        <div class="footer-logo">
-          <img
-            class="footer-logo-img"
-            src="./assets/img/dream-logo.png"
-            alt="Dream Travel Logo" />
-          <span>Dream <span class="highlight-text">Travel</span> </span>
+        <div class="footer-content">
+          <div class="footer-logo">
+            <img
+              class="footer-logo-img"
+              src="./assets/img/dream-logo.png"
+              alt="Dream Travel Logo" />
+            <span>Dream <span class="highlight-text">Travel</span> </span>
+          </div>
+          <p class="footer-text">
+            Explore the world with Dream Travel, your trusted companion in every journey. Let us
+            turn your dreams into unforgettable memories.
+          </p>
+          <ul class="footer-social-media">
+            <li>
+              <a
+                href="#"
+                class="footer-social-link">
+                <img
+                  class="footer-social-icon"
+                  src="./assets/img/facebook.svg"
+                  alt="Facebook" />
+              </a>
+            </li>
+            <li>
+              <a
+                href="#"
+                class="footer-social-link">
+                <img
+                  class="footer-social-icon"
+                  src="./assets/img/instagram.svg"
+                  alt="Instagram"
+              /></a>
+            </li>
+            <li>
+              <a
+                href="#"
+                class="footer-social-link">
+                <img
+                  class="footer-social-icon"
+                  src="./assets/img/linkedin.svg"
+                  alt="Linkedin"
+              /></a>
+            </li>
+            <li>
+              <a
+                href="#"
+                class="footer-social-link">
+                <img
+                  class="footer-social-icon"
+                  src="./assets/img/github.svg"
+                  alt="Github"
+              /></a>
+            </li>
+          </ul>
+          <hr />
+          <p class="footer-copyright">2024, All Rights Reserved.</p>
         </div>
-        <p class="footer-text">
-          Explore the world with Dream Travel, your trusted companion in every journey. Let us turn
-          your dreams into unforgettable memories.
-        </p>
-        <ul class="footer-social-media">
-          <li>
-            <a
-              href="#"
-              class="footer-social-link">
-              <img
-                class="footer-social-icon"
-                src="./assets/img/facebook.svg"
-                alt="Facebook" />
-            </a>
-          </li>
-          <li>
-            <a
-              href="#"
-              class="footer-social-link">
-              <img
-                class="footer-social-icon"
-                src="./assets/img/instagram.svg"
-                alt="Instagram"
-            /></a>
-          </li>
-          <li>
-            <a
-              href="#"
-              class="footer-social-link">
-              <img
-                class="footer-social-icon"
-                src="./assets/img/linkedin.svg"
-                alt="Linkedin"
-            /></a>
-          </li>
-          <li>
-            <a
-              href="#"
-              class="footer-social-link">
-              <img
-                class="footer-social-icon"
-                src="./assets/img/github.svg"
-                alt="Github"
-            /></a>
-          </li>
-        </ul>
-        <hr />
-        <p class="footer-copyright">2024, All Rights Reserved.</p>
       </div>
     </footer>
   </body>
